--- a/src/app/Modules/auth/Components/login/login.component.html
+++ b/src/app/Modules/auth/Components/login/login.component.html
@@ -31,6 +31,7 @@
       type="submit" 
       color="primary" 
       [disabled]="form.invalid">Valider</button>
+      <a [routerLink]="['login']"  class="forgotPwdLabel">Mot de passe oublié ?</a>
     </form>
   </mat-card-content>
 
