--- a/src/app/Modules/auth/Components/login/login.component.scss
+++ b/src/app/Modules/auth/Components/login/login.component.scss
@@ -11,9 +11,12 @@ mat-card {
   }
 
 .forgotPwdLabel{
-    align-content: flex-end;
+    color:gray;
+    font-size:10px;
 }
 
 .hideButton{
     color:gray;
+    
 }
+
