--- a/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
@@ -1,3 +1,4 @@
+<mat-card>
 <div>
     <button mat-button color="war" [routerLink]="['../../Etudiants']">Retour</button>
     <button mat-button color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
@@ -25,3 +26,4 @@
         </mat-accordion>
     </div>
 </div>
+</mat-card>
