--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -28,7 +28,7 @@
         </mat-form-field>
 
       <button
-        mat-dialog-close
+        [mat-dialog-close]="false"
         mat-raised-button
         color="accent"
       >Annuller</button>
