--- a/src/app/Modules/professor/Components/student-list/student-detailed/student-detailed.component.scss
+++ b/src/app/Modules/professor/Components/student-list/student-detailed/student-detailed.component.scss
@@ -1,21 +1,4 @@
 
-
-mat-card{
-    margin:20px;
-}
-
-.openedIcon{
-    color: teal;
-    
-}
-
-
-
-.custom-date-class {
-    background: teal;
-    border-radius: 100%;
-}
-
 @keyframes slide-in-bck-center {
     0% {
       transform: translateZ(600px);
@@ -29,5 +12,6 @@ mat-card{
 
 .slide-in-bck-center {
     animation: slide-in-bck-center 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    margin: 200px;
+
+    padding: 30px;
 }
