--- a/src/app/Modules/professor/Components/test-result/test-result.component.html
+++ b/src/app/Modules/professor/Components/test-result/test-result.component.html
@@ -1,12 +1,13 @@
-<div>
+<mat-card>
+    <mat-card-header *ngIf="statusCode > 1">
+        <mat-card-title>Résultats de <b>{{student.lastName}} {{student.firstName}}</b></mat-card-title>
+    </mat-card-header>
+
+<div *ngIf="statusCode > 1">
     <button mat-button 
-    *ngIf="statusCode > 1"
     color="war" [routerLink]="['../../Etudiants']">Retour</button>
     <button mat-button 
-    *ngIf="statusCode > 1"
     color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
-
-    
 </div>
 
 <div *ngIf="categories != null">
@@ -51,3 +52,4 @@
         </mat-accordion>
     </div>
 </div>
+</mat-card>
