save before change

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,4 +1,5 @@
-<mat-card *ngIf="user$ | async as user"  class="focus-in-expand-fwd">
+<mat-card class="focus-in-expand-fwd">
+
     <mat-card-content>
         <p>{{ WelcomeMsg }}</p>
 
