--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,8 @@
             <router-outlet>
             </router-outlet>
         </body>
-    <!-- <auth-login *ngIf=" == false"></auth-login> -->
+    <!-- <footer>
+        <mat-toolbar color="primary" class="footer">
+            <p>test</p>
+        </mat-toolbar>
+    </footer> -->
