--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,12 @@
     background-color:#4f4f4f ;
     color: white;
 }
+
+
+.footer{
+    position: sticky;
+    height: 30px;
+}
+footer{
+    text-align: center;
+}
