--- a/src/app/Modules/User/Components/details/details.component.html
+++ b/src/app/Modules/User/Components/details/details.component.html
@@ -1,6 +1,6 @@
 <mat-card class="slide-in-bck-center">
     <mat-card-header>
-        <img mat-card-avatar [src]="userDetailed.photo">
+        <img mat-card-avatar [src]="userDetailed.photo" (click)="openPhotoDialog()">
         <mat-card-title> {{userDetailed.lastName}}</mat-card-title>
         <mat-card-subtitle> {{userDetailed.firstName}}</mat-card-subtitle>
     </mat-card-header>
