--- a/src/app/Modules/professor/Components/test-result/results/results/results.component.html
+++ b/src/app/Modules/professor/Components/test-result/results/results/results.component.html
@@ -1,1 +1,51 @@
-<p>results works!</p>
+<div class="grid-container">
+    <h1 class="mat-h1">Résultats de la classe: </h1>
+    <mat-grid-list cols="4" rowHeight="10vh">
+
+      <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              Categorie:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
+            <mat-label>Selectionnez une categorie</mat-label>
+            <mat-select [value]="startingCategoryId" >
+                <mat-option [value]="cat.id" *ngFor="let cat of categories">{{cat.name}}</mat-option>
+              </mat-select>
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+
+      <mat-grid-tile [colspan]="2" [rowspan]="1">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              Etudiants:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
+            <mat-label>Selectionnez un étudiant</mat-label>
+            <mat-select [value]="startingStudentId" >
+                <mat-option [value]="student.id" *ngFor="let student of students">{{student.lastName}} {{student.firstName}}</mat-option>
+            </mat-select>
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+      
+      <mat-grid-tile [colspan]="4" [rowspan]="6">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              Graphique:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
+            <div>Card Content Here</div>
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+
+    </mat-grid-list>
+  </div>
