--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,8 +1,47 @@
-<mat-card class="focus-in-expand-fwd">
+<div class="grid-container">
+    <div class="bounce-in-top">
+    <h1 class="mat-h1">Home works: </h1>
+    <mat-grid-list cols="4" rowHeight="10vh">
 
-    <mat-card-content>
-        <p>{{ WelcomeMsg }}</p>
+      <mat-grid-tile [colspan]="2" [rowspan]="3">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              content1:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
 
- 
-    </mat-card-content>
-</mat-card>
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+
+      <mat-grid-tile [colspan]="2" [rowspan]="3">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              content2:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
+
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+      
+      <mat-grid-tile [colspan]="4" [rowspan]="4">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <mat-card-title>
+              Content3:
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content">
+
+          </mat-card-content>
+        </mat-card>
+      </mat-grid-tile>
+
+    </mat-grid-list>
+    </div>
+  </div>
