bar chart & line chart +- opérationnel

--- a/src/app/Modules/professor/Components/student-list/student-list.component.html
+++ b/src/app/Modules/professor/Components/student-list/student-list.component.html
@@ -25,6 +25,9 @@
         </mat-list>
     </mat-card-content>
 </mat-card>
+<mat-card>
+    <app-results></app-results>
+</mat-card>
 
 <mat-dialog-content>
 <router-outlet></router-outlet>
