--- a/src/app/Modules/professor/Components/test-result/results/results/results.component.html
+++ b/src/app/Modules/professor/Components/test-result/results/results/results.component.html
@@ -2,7 +2,7 @@
     <h1 class="mat-h1">Résultats de la classe: </h1>
     <mat-grid-list cols="4" rowHeight="10vh">
 
-      <mat-grid-tile [colspan]="2" [rowspan]="1">
+      <mat-grid-tile [colspan]="" [rowspan]="1">
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
@@ -18,7 +18,7 @@
         </mat-card>
       </mat-grid-tile>
 
-      <mat-grid-tile [colspan]="2" [rowspan]="1">
+      <!-- <mat-grid-tile [colspan]="2" [rowspan]="1">
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
@@ -32,7 +32,7 @@
             </mat-select>
           </mat-card-content>
         </mat-card>
-      </mat-grid-tile>
+      </mat-grid-tile> -->
       
       <mat-grid-tile [colspan]="4" [rowspan]="6">
         <mat-card class="dashboard-card">
