--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -31,7 +31,7 @@
         [mat-dialog-close]="false"
         mat-raised-button
         color="accent"
-      >Annuller</button>
+      >Annuler</button>
 
       <button 
       mat-raised-button 
