--- a/src/app/Modules/professor/Components/trimestrial-note/Create-note/create.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/Create-note/create.component.html
@@ -50,7 +50,7 @@
     mat-dialog-close
     mat-raised-button
     color="accent"
-    >Annuller</button>
+    >Annuler</button>
 
     <button 
     mat-raised-button 
