--- a/src/app/Components/confirmBox/Delete/delete.component.html
+++ b/src/app/Components/confirmBox/Delete/delete.component.html
@@ -4,7 +4,7 @@
         <button 
         mat-raised-button 
         (click)="validation == false"
-        [mat-dialog-close]="validation"
+        mat-dialog-close
         color="war"
         >Retour</button>
   
