--- a/src/app/Modules/professor/Components/test-result/create-result/create-result.component.html
+++ b/src/app/Modules/professor/Components/test-result/create-result/create-result.component.html
@@ -84,31 +84,31 @@
 
     <div style="text-align:center">
       <mat-card style="margin-top: 10px; width: 90%;">
-          <mat-card-content>
-              <ul>
-                  <li *ngFor="let file of files">
-                      <mat-progress-bar [value]="file.progress"></mat-progress-bar>
-                      <span id="file-label">
-                      </span>
-                  </li>
-              </ul>
+          <mat-card-content *ngFor="let file of files">
+              
+                  
+                      <mat-progress-bar [value]="file.progress" [color]="progressColor" ></mat-progress-bar>
+                      <!-- <span id="file-label">
+                      </span> -->
+
           </mat-card-content>
           <mat-card-actions>
-              <button mat-button type="button" color="primary" (click)="onUploadClick()">
-                  <mat-icon>file_upload</mat-icon>
-                  Charger
+
+              <button mat-button type="button" color="primary" (click)="onUploadClick()" [disabled]="!progressUploaded">
+                  <mat-icon>{{LoadButton}}</mat-icon>
+                  <span *ngIf="progressUploaded">Charger le document</span>
               </button>
           </mat-card-actions>
       </mat-card>
       <input type="file" formControlName="document" #fileUpload id="fileUpload" name="fileUpload"
            style="display:none;"/>
-  </div>
+    </div>
 
     <button
     mat-dialog-close
     mat-raised-button
     color="accent"
-    >Annuller</button>
+    >Annuler</button>
 
     <button 
     mat-raised-button 
