--- a/src/app/Modules/professor/Components/test-result/results/results/results.component.html
+++ b/src/app/Modules/professor/Components/test-result/results/results/results.component.html
@@ -1,8 +1,7 @@
 <div class="grid-container">
-    <h1 class="mat-h1">Résultats de la classe: </h1>
     <mat-grid-list cols="4" rowHeight="10vh">
 
-      <mat-grid-tile [colspan]="" [rowspan]="1">
+      <!-- <mat-grid-tile [colspan]="" [rowspan]="1">
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
@@ -16,7 +15,7 @@
               </mat-select>
           </mat-card-content>
         </mat-card>
-      </mat-grid-tile>
+      </mat-grid-tile> -->
 
       <!-- <mat-grid-tile [colspan]="2" [rowspan]="1">
         <mat-card class="dashboard-card">
@@ -38,10 +37,16 @@
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
-              Graphique:
+              <h1 class="mat-h1">Résultats de la classe: </h1>
             </mat-card-title>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content">
+            <div>
+              <mat-label>Selectionnez une categorie</mat-label>
+                <mat-select [value]="startingCategoryId" >
+                  <mat-option  [value]="cat.id" *ngFor="let cat of categories">{{cat.name}}</mat-option>
+              </mat-select>
+            </div>
             <div>
                 <canvas baseChart 
                     [datasets]="LineChartData"
