--- a/src/app/Modules/professor/Components/test-result/update-result/update-result.component.html
+++ b/src/app/Modules/professor/Components/test-result/update-result/update-result.component.html
@@ -69,7 +69,7 @@
     <mat-label>Description:</mat-label>
 
     <textarea 
-      style="height: 30vh"
+      style="height: 15vh"
       matInput
       formControlName="description" 
       required
@@ -81,11 +81,33 @@
   </mat-form-field>
     <br/>
 
+    <div style="text-align:center">
+      <mat-card style="margin-top: 10px; width: 90%;">
+          <mat-card-content *ngFor="let file of files">
+              
+                  
+                      <mat-progress-bar [value]="file.progress" [color]="progressColor" ></mat-progress-bar>
+                      <!-- <span id="file-label">
+                      </span> -->
+
+          </mat-card-content>
+          <mat-card-actions>
+
+              <button mat-button type="button" color="primary" (click)="onUploadClick()" [disabled]="!progressUploaded">
+                  <mat-icon>{{LoadButton}}</mat-icon>
+                  <span *ngIf="progressUploaded">Charger le document</span>
+              </button>
+          </mat-card-actions>
+      </mat-card>
+      <input type="file" formControlName="document" #fileUpload id="fileUpload" name="fileUpload"
+           style="display:none;"/>
+    </div>
+
     <button
     mat-dialog-close
     mat-raised-button
     color="accent"
-    >Annuller</button>
+    >Annuler</button>
 
     <button 
     mat-raised-button 
