--- a/src/app/Modules/professor/Components/trimestrial-note/Update-note/update.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/Update-note/update.component.html
@@ -53,7 +53,7 @@
     mat-dialog-close
     mat-raised-button
     color="accent"
-    >Annuller</button>
+    >Annuler</button>
 
     <button 
     mat-raised-button 
