--- a/src/app/Modules/auth/Components/login/login.component.html
+++ b/src/app/Modules/auth/Components/login/login.component.html
@@ -5,12 +5,14 @@
       <mat-error *ngIf="error">
         {{this.errorMsg}}
       </mat-error>
+      <!-- login -->
       <mat-form-field>
         <input matInput placeholder="Login" formControlName="login" required>
         <mat-error>
           Le login est obligatoire.
         </mat-error>
       </mat-form-field>
+      <!-- password -->
       <mat-form-field>
         <input 
         matInput placeholder="Mot de passe" 
@@ -29,7 +31,7 @@
       <mat-spinner-button [options]="spinnerButtonOptions" [disabled]="form.invalid" >
       </mat-spinner-button>
 
-      <a [routerLink]="['login']"  class="forgotPwdLabel">Mot de passe oublié ?</a>
+      <a (click)="openForgotPasswordDialog()"  class="forgotPwdLabel">Mot de passe oublié ?</a>
     </form>
   </mat-card-content>
 
