--- a/src/app/Modules/professor/Components/test-result/test-result.component.scss
+++ b/src/app/Modules/professor/Components/test-result/test-result.component.scss
@@ -2,3 +2,8 @@
   .dashboard-card-content {
     text-align: center;
   }
+
+  .example-headers-align .mat-expansion-panel-header-description {
+    justify-content: space-between;
+    align-items: center;
+  }
