--- a/src/app/Modules/auth/Components/forgot-password/forgot-password.component.html
+++ b/src/app/Modules/auth/Components/forgot-password/forgot-password.component.html
@@ -59,7 +59,7 @@
                 <ng-template matStepLabel>Changez votre mot de passe</ng-template>
             </form> -->
         </div>
-        <div *ngIf="!showSecondForm" [class]="showSecondForm == true ? 'slide-in-blurred-top':''">
+        <div *ngIf="firstFormValidation" [class]="firstFormValidation == true ? 'slide-in-blurred-top':''">
             <form [formGroup]="secondForm" (ngSubmit)="onSecondSubmit()">
                 <mat-error *ngIf="error == true">
                     {{this.errorMsg}}
