--- a/src/app/Modules/professor/Components/student-list/student-detailed/student-detailed.component.html
+++ b/src/app/Modules/professor/Components/student-list/student-detailed/student-detailed.component.html
@@ -1,7 +1,7 @@
 
         <mat-card>
             <mat-card-header>
-                <img mat-card-avatar [src]="userDetailed.photo">
+                <img mat-card-avatar [src]="userDetailed.photo" (click)="openPhotoDialog()">
                 <mat-card-title> {{userDetailed.lastName}}</mat-card-title>
                 <mat-card-subtitle> {{userDetailed.firstName}}</mat-card-subtitle>
             </mat-card-header>
